// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render TabsItem Should TabsItem active render correctly 1`] = `
<li
  className="movie-nav__item movie-nav__item--active"
>
  <a
    className="movie-nav__link"
    href="#"
    id="details"
    onClick={[Function]}
  >
    Details
  </a>
</li>
`;

exports[`Render TabsItem Should TabsItem render correctly 1`] = `
<li
  className="movie-nav__item"
>
  <a
    className="movie-nav__link"
    href="#"
    id="details"
    onClick={[Function]}
  >
    Details
  </a>
</li>
`;
